# bunnyhopapi

./: .gitignore  README.md  index.html  main.py  pyproject.toml  setup.py  ws_index.html
.github/workflows/: publish.yml  test.yml
bunnyhopapi/: __init__.py  client.py  client_handler.py  handlers.py  models.py  request.py  response.py  router.py  server.py  swagger.py  templates.py  websocket.py
example/: auth.py  benchmark.py  cookies.py  crud.py  example.py  health.py  hello_world.py  jinja.py  main.py  sse.py  sse_index.html  websockets.py  ws_index.html
example/static/: index.html
example/static/css/: styles.css
example/static/js/: script.js
example/templates/jinja/: base.html  components.html  index.html
example/templates/static_html/: sse_index.html  ws_index.html
server/: bunnyhopapi.py
tests/: test_client_handler.py  test_cookies.py  test_handlers.py  test_models.py  test_reload.py  test_request.py  test_response.py  test_router.py  test_server.py  test_swagger.py  test_templates.py  test_websocket_handler.py
