[project]
name = "bunnyhopapi"
version = "1.0.0"
description = "BunnyHopApi is a lightweight and fast web framework designed to handle modern web development needs."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
dependencies = [
    "jinja2==3.1.6",
    "pydantic==2.11.0",
    "uvloop==0.21.0",
]

[project.optional-dependencies]
lint = [
    "ruff==0.11.2",
]

[dependency-groups]
dev = []

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

