[project]
name = "bunnyhopapi"
version = "1.5.0"
description = "BunnyHopApi is a lightweight and fast web framework designed to handle modern web development needs."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "jinja2==3.1.6",
    "pydantic==2.13.0",
    "uvloop==0.22.1",
    "watchdog==6.0.0",
]

[project.optional-dependencies]
lint = [
    "ruff==0.15.10",
]
dev = [
    "pytest==9.0.3",
    "pytest-asyncio==1.3.0",
    "pytest-cov==7.1.0",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"
